sort.basic.bubble.AlgBubbleSort1.scala.code


def bubbleSort() {
 

  
var change:Boolean=false;

do {
  
change=true;  

for(j<-0 to getNombreValeurs()-1) {
  
  if (plusPetit(j,j+1)==true) {
  		echange(j,j+1);
  		change=true;
  }  else
    
}





  
  
  
  
  
  
  
} while (change=true)










}